[package]
name = "my-ledger-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
clap = { version = "4.5.22", features = ["derive"] }
diesel = { version = "2.2.6", features = ["postgres", "chrono", "serde_json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.215", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.133"
dotenv = "0.15.0"
