[package]
name = "my-ledger-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["default"] }
clap = { version = "4.5.22", features = ["derive"] }
diesel = { version = "2.2.6", features = ["postgres", "chrono", "serde_json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.215", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
rust_xlsxwriter = "0.80.0"
hyper = { version = "1.5.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors"] }
calamine = "0.26.1"

[profile.dev]
rustfmt.skip_unreachable = true

[[bin]]
name = "cli"
path = "src/bin/cli.rs"
[[bin]]
name = "my-ledger-api"
path = "src/bin/api.rs"
